<resources>
    <string name="app_name">Unbit</string>
    <string name="get_members_success">{\"data\": [{\"id\":1,\"display_name\": \"Marcus Cruz\",\"job_title\": \"Android Developer\",\"description\": \"Quisque sagittis justo ac felis eleifend molestie. Pellentesque nisi urna, scelerisque sit amet blandit et, finibus non arcu.\"}, {\"id\":2,\"display_name\": \"Eddie Randolph\",\"job_title\": \"Android Developer\",\"description\": \"Praesent molestie dapibus pulvinar. Donec in eleifend quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis.\"}, {\"id\":3,\"display_name\": \"Justine Henderson\",\"job_title\": \"iOS Developer\",\"description\": \"Duis ultricies quis tellus eu convallis. Aliquam nisi leo, vulputate a nisi in, sollicitudin vulputate risus. Mauris quis mattis nunc.\"}, {\"id\":4,\"display_name\": \"Lia Shelton\",\"job_title\": \"Senior iOS Developer\",\"description\": \"Aenean et nisl at nisl rutrum semper. Praesent maximus, dolor in pellentesque aliquet, est tellus pharetra urna, eget consequat turpis.\"}, {\"id\":5,\"display_name\": \"Jonathon Sheppard\",\"job_title\": \"CIO\",\"description\": \"Integer sed enim eleifend, fermentum libero sit amet, dictum nisi.\"}, {\"id\":6,\"display_name\": \"Thalia Cobb\",\"job_title\": \"DevOps Engineer\",\"description\": \"Vestibulum nibh arcu, interdum id augue vel, blandit porttitor diam. Ut risus magna, malesuada vitae tortor dapibus, blandit imperdiet lacus.\"}, {\"id\":7,\"display_name\": \"Joanna Shaffer\",\"job_title\": \"Architectural Engineer\",\"description\": \"Integer sit amet metus ornare, feugiat ipsum a, consectetur erat. Fusce nec egestas quam. Donec libero justo, efficitur eget mattis.\"}, {\"id\":8,\"display_name\": \"Michael Lang\",\"job_title\": \"Web Developer\",\"description\": \"Nulla porttitor libero vel ligula tempus, et maximus leo accumsan. Duis varius lacinia vehicula.\"}, {\"id\":9,\"display_name\": \"Jonathon Hamilton\",\"job_title\": \"Internet Explorer Bug Specialist\",\"description\": \"Maecenas in aliquam orci. Nunc auctor, ligula in molestie consectetur, libero erat tincidunt orci, sit amet tincidunt lorem ligula faucibus.\"}, {\"id\":10,\"display_name\": \"Lisa Walker\",\"job_title\": \"Lead Designer\",\"description\": \"Quisque pharetra, leo ut finibus mollis, urna erat ultrices nunc, vitae suscipit mi dui at purus. Proin et turpis et.\"}, {\"id\":11,\"display_name\": \"Julie Hartman\",\"job_title\": \"CEO\",\"description\": \"Quisque commodo et neque id laoreet. Nullam luctus cursus dignissim. Phasellus eu magna rhoncus, placerat diam egestas, egestas quam. Etiam.\"}, {\"id\":12,\"display_name\": \"Michelle Velasquez\",\"job_title\": \"Lead Mobile Engineer\",\"description\": \"Fusce mauris odio, viverra ac auctor pretium, tincidunt ut enim.\"}]}</string>
    <!-- <string name="get_members_success">{\"data\": [{\"id\":1,\"display_name\": \"Marcus Cruz\",\"job_title\": \"Android Developer\",\"description\": \"Quisque sagittis justo ac felis eleifend molestie. Pellentesque nisi urna, scelerisque sit amet blandit et, finibus non arcu.\"}, {\"id\":2,\"display_name\": \"Eddie Randolph\",\"job_title\": \"Android Developer\",\"description\": \"Praesent molestie dapibus pulvinar. Donec in eleifend quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis.\"}, {\"id\":3,\"display_name\": \"Justine Henderson\",\"job_title\": \"iOS Developer\",\"description\": \"Duis ultricies quis tellus eu convallis. Aliquam nisi leo, vulputate a nisi in, sollicitudin vulputate risus. Mauris quis mattis nunc.\"}, {\"id\":4,\"display_name\": \"Lia Shelton\",\"job_title\": \"Senior iOS Developer\",\"description\": \"Aenean et nisl at nisl rutrum semper. Praesent maximus, dolor in pellentesque aliquet, est tellus pharetra urna, eget consequat turpis.\"}, {\"id\":5,\"display_name\": \"Jonathon Sheppard\",\"job_title\": \"CIO\",\"description\": \"Integer sed enim eleifend, fermentum libero sit amet, dictum nisi.\"}, {\"id\":6,\"display_name\": \"Thalia Cobb\",\"job_title\": \"DevOps Engineer\",\"description\": \"Vestibulum nibh arcu, interdum id augue vel, blandit porttitor diam. Ut risus magna, malesuada vitae tortor dapibus, blandit imperdiet lacus.\"}, {\"id\":7,\"display_name\": \"Joanna Shaffer\",\"job_title\": \"Architectural Engineer\",\"description\": \"Integer sit amet metus ornare, feugiat ipsum a, consectetur erat. Fusce nec egestas quam. Donec libero justo, efficitur eget mattis.\"}, {\"id\":8,\"display_name\": \"Michael Lang\",\"job_title\": \"Web Developer\",\"description\": \"Nulla porttitor libero vel ligula tempus, et maximus leo accumsan. Duis varius lacinia vehicula.\"}, {\"id\":9,\"display_name\": \"Jonathon Hamilton\",\"job_title\": \"Internet Explorer Bug Specialist\",\"description\": \"Maecenas in aliquam orci. Nunc auctor, ligula in molestie consectetur, libero erat tincidunt orci, sit amet tincidunt lorem ligula faucibus.\"}, {\"id\":10,\"display_name\": \"Lisa Walker\",\"job_title\": \"Lead Designer\",\"description\": \"Quisque pharetra, leo ut finibus mollis, urna erat ultrices nunc, vitae suscipit mi dui at purus. Proin et turpis et.\"}, {\"id\":11,\"display_name\": \"Julie Hartman\",\"job_title\": \"CEO\",\"description\": \"Quisque commodo et neque id laoreet. Nullam luctus cursus dignissim. Phasellus eu magna rhoncus, placerat diam egestas, egestas quam. Etiam.\"}, {\"id\":12,\"display_name\": \"Michelle Velasquez\",\"job_title\": \"Lead Mobile Engineer\",\"description\": \"Fusce mauris odio, viverra ac auctor pretium, tincidunt ut enim.\"}]}</string>-->
    <string name="endpoint_not_found">The endpoint you attempted to access could not be found.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_field_empty">This field can not be blank.</string>
    <string name="error_payload_field_required">This field was not found in your request parameters but is required.</string>
    <string name="endpoint_not_found_no_member_id">The endpoint you attempted to access could not be found. Please supply a member ID to retrieve their list of hobbies.</string>
    <string name="get_member_hobbies_success_0">{\"data\": [{\"title\":\"Painting\",\"skill_level\":4.5},{\"title\":\"Drawing\",\"skill_level\":4.2},{\"title\":\"Poetry\",\"skill_level\":2.7},{\"title\":\"Design\",\"skill_level\":1.4},{\"title\":\"Musical Composing\",\"skill_level\":5.0},{\"title\":\"Piano\",\"skill_level\":0.8},{\"title\":\"Clarinet\",\"skill_level\":2.1},{\"title\":\"Saxophone\",\"skill_level\":3.6}]}</string>
    <string name="get_member_hobbies_success_1">{\"data\": [{\"title\":\"Football\",\"skill_level\":4.5},{\"title\":\"Baseball\",\"skill_level\":4.2},{\"title\":\"Tennis\",\"skill_level\":2.7},{\"title\":\"Basketball\",\"skill_level\":1.4},{\"title\":\"Hockey\",\"skill_level\":5.0},{\"title\":\"Little League Coaching\",\"skill_level\":0.8},{\"title\":\"Wiffleball\",\"skill_level\":2.1},{\"title\":\"Frisbee\",\"skill_level\":3.6},{\"title\":\"Roller Skating\",\"skill_level\":1.5},{\"title\":\"Skateboarding\",\"skill_level\":4.9},{\"title\":\"Curling\",\"skill_level\":0.1},{\"title\":\"Boxing\",\"skill_level\":3.6},{\"title\":\"MMA\",\"skill_level\":3.9},{\"title\":\"Brazilian Jiu-Jitsu\",\"skill_level\":2.7},{\"title\":\"American Football\",\"skill_level\":4.1}]}</string>
    <string name="get_member_hobbies_success_2">{\"data\": [{\"title\":\"Video Games\",\"skill_level\":4.5},{\"title\":\"Java Programming\",\"skill_level\":4.2},{\"title\":\"Android Development\",\"skill_level\":2.7},{\"title\":\"Linux Troubleshooting\",\"skill_level\":1.4},{\"title\":\"Apple Fanboy\",\"skill_level\":5.0},{\"title\":\"CS:GO Semi-Professional\",\"skill_level\":0.8},{\"title\":\"DotA Enthusiast\",\"skill_level\":2.1},{\"title\":\"League of Legends\",\"skill_level\":3.6},{\"title\":\"Major League Hacking\",\"skill_level\":2.1},{\"title\":\"Rocket League\",\"skill_level\":4.6},{\"title\":\"Civilization 5\",\"skill_level\":1.3},{\"title\":\"Fortnite\",\"skill_level\":3.2},{\"title\":\"PLAYERUNKNOWNs Battlegrounds\",\"skill_level\":3.7},{\"title\":\"Hearthstone\",\"skill_level\":3.4},{\"title\":\"Heroes of Newarth\",\"skill_level\":4.7},{\"title\":\"World of Warcraft 37\",\"skill_level\":4.9}]}</string>
    <string name="default_avatar_description">default avatar.</string>
    <string name="default_description_of_item_member">default description of item member.</string>
    <string name="default_position_of_item_member">default position of item member.</string>
    <string name="default_name_of_item_member">default name of item member.</string>
    <string name="default_hobby_title">default hobby title.</string>
    <string name="default_hobby_level">default hobby level.</string>
    <string name="appbar_create_member">Create Member</string>
    <string name="default_settings_name">Settings Name</string>
    <string name="default_settings_description">Settings Description</string>
    <string name="default_settings_value">Settings Value</string>
    <string name="item_settings_name">Settings</string>
    <string name="item_create_member_name">Create Member</string>
    <string name="snackbar_new_member_error">There was an error creating a new member, please fix the error.</string>
    <string name="creation_error_display_name">You need to enter something for display name.</string>
    <string name="creation_error_job_title">You need to enter something for job title.</string>
    <string name="creation_error_description">You need to enter something for description.</string>
    <string name="creation_create_member_label">Create Member</string>
    <string name="creation_create_description_label">Description</string>
    <string name="creation_create_jobtitle_label">Job Title</string>
    <string name="creation_create_displayname_label">Display Name</string>
</resources>
