<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mPresenter"
            type="coffee.flavors.unbit.view.presenters.ui.PresenterItemMember"/>
    </data>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_member_root_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_member_root_layout"
        android:backgroundTint="@color/colorLight">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/item_member_avatar"
                android:layout_width="100dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/gd_item_member_50_hor"
                android:src="@drawable/default_avatar"
                android:contentDescription="@string/default_avatar_description" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/gd_item_member_50_hor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_member_avatar"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/item_member_name"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/item_member_position"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:text="@string/default_name_of_item_member"
                    android:textColor="@color/colorLightPrimary"
                    android:gravity="center|start"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/item_member_position"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_member_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:text="@string/default_position_of_item_member"
                    android:textColor="@color/colorLightPrimary"
                    android:alpha="0.5"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_member_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/gd_item_member_50_hor"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/default_description_of_item_member"
                android:textColor="@color/colorLightPrimary"
                android:textStyle="bold"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gd_item_member_50_hor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.50" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>