<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mViewModel"
            type="coffee.flavors.unbit.controller.viewmodels.ViewModelCreation"/>
        <variable
            name="mPresenter"
            type="coffee.flavors.unbit.view.presenters.activities.PresenterCreation" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_creation_view_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/creation_abl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/creation_appbar_back_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/gd_creation_appbar_15_ver"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:icon="@drawable/baseline_keyboard_arrow_left_white_18dp"
                    android:onClick="@{()->mPresenter.fireBackBtn()}"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/creation_appbar_title"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toEndOf="@+id/creation_appbar_back_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/appbar_create_member"
                    android:textSize="15sp"
                    android:textColor="@color/colorLight"
                    android:gravity="center|start"
                    android:paddingStart="08dp"
                    android:paddingEnd="0dp"/> <!-- satisfy lint , code quality -->
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_creation_appbar_15_ver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/creation_display_name_til"
            style="@style/MtrlTheme.TextInputLayout"
            android:layout_width="@dimen/create_text_input_layout_width"
            android:layout_height="wrap_content"
            android:hint="@string/creation_create_displayname_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creation_abl"
            app:errorEnabled="true"
            android:paddingTop="08dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/creation_display_name_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="12sp"
                android:textColor="@color/colorLight"
                android:inputType="text|textNoSuggestions"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/creation_job_title_til"
            style="@style/MtrlTheme.TextInputLayout"
            android:layout_width="@dimen/create_text_input_layout_width"
            android:layout_height="wrap_content"
            android:hint="@string/creation_create_jobtitle_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creation_display_name_til"
            app:errorEnabled="true"
            android:paddingTop="08dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/creation_job_title_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="12sp"
                android:textColor="@color/colorLight"
                android:inputType="text|textNoSuggestions"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/creation_description_til"
            style="@style/MtrlTheme.TextInputLayout"
            android:layout_width="@dimen/create_text_input_layout_width"
            android:layout_height="wrap_content"
            android:hint="@string/creation_create_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creation_job_title_til"
            app:errorEnabled="true"
            android:paddingTop="08dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/creation_description_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="12sp"
                android:textColor="@color/colorLight"
                android:inputType="text|textNoSuggestions"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/creation_create_member_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/creation_description_til"
            android:text="@string/creation_create_member_label"
            android:paddingTop="08dp"
            android:onClick="@{()->mPresenter.fireCreateBtn()}"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_creation_50_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>